--- a/IClothingApplication/Views/Shared/_Layout.cshtml
+++ b/IClothingApplication/Views/Shared/_Layout.cshtml
@@ -116,6 +116,8 @@
         <!-- Footer -->
         <footer class="footer mt-auto text-center text-white" style="background-color: rgb(33, 37, 41, 0.8);">
             <!-- Grid container -->
+            @if (Session["UserType"] == "customer")
+            {
             <div class="container p-4 pb-0">
                 <!-- Section: CTA -->
                 <section class="">
@@ -125,6 +127,7 @@
                     </p>
                 </section>
             </div>
+            }
             <!-- Grid container -->
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
