--- a/IClothingApplication/Views/Shared/_Layout.cshtml
+++ b/IClothingApplication/Views/Shared/_Layout.cshtml
@@ -85,8 +85,8 @@
                                 {
                                     @Html.ActionLink("My Cart", "ViewCart", "ShoppingCarts", new { area = "" }, new { @class = "dropdown-item", style ="color: #007bff" })
                                     @Html.ActionLink("Emails", "Index", "Emails", new {area = "" }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Write a Query", "Create", "UserQueries", new {area = "" }, new { @class = "dropdown-item" })
-                                    @Html.ActionLink("Send a Comment", "Create", "UserComments", new {area = "" }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("My Account", "Details", "Customers", new {area = "" }, new { @class = "dropdown-item" })
+
                                 }
                                 else 
                                 {
