--- a/IClothingApplication/Views/Home/RegisterPassword.cshtml
+++ b/IClothingApplication/Views/Home/RegisterPassword.cshtml
@@ -6,34 +6,33 @@
 <main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
 
-    @using (Html.BeginForm("RegisterPassword", "Home", FormMethod.Post, new { role = "form" }))
+    @using (Html.BeginForm("RegisterPassword"))
     {
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
+        <br />
         <h4>Create a new account.</h4>
         <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="row">
-            @Html.LabelFor(m => m.userAccountName, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.userAccountName, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            @Html.LabelFor(m => m.userEncryptedPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.userEncryptedPassword, new { @class = "form-control" })
-            </div>
-        </div>
-
-        @*@(Model.passwordExpiryTime = 100)
-            @(Model.userAccountExpiryDate = new DateTime())
-            @(Model.customerID = (ViewBag.userType == "customer" ? ViewBag.userID : null))
-            @(Model.adminID = (ViewBag.userType == "admin" ? ViewBag.userID : null))*@
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="row">
-            <div class="offset-md-2 col-md-10">
-                <input type="submit" value="Register" class="btn btn-outline-dark" />
+            <div class="col-md-12">
+                <div class="mb-3">
+                    @Html.LabelFor(a => a.userAccountName, "Username", new { @class = "form-label" })
+                    @Html.TextBoxFor(a => a.userAccountName, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(a => a.userAccountName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="mb-3">
+                    @Html.LabelFor(a => a.userEncryptedPassword, "Password", new { @class = "form-label" })
+                    @Html.PasswordFor(a => a.userEncryptedPassword, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(a => a.userEncryptedPassword, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="col-12">
+            <div class="mb-5 mt-3">
+                <input type="submit" value="Create Account" class="btn btn-primary" />
             </div>
         </div>
     }
