--- a/IClothingApplication/Views/Home/Register.cshtml
+++ b/IClothingApplication/Views/Home/Register.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div class="col-12">
             <div class="mb-5 mt-3">
-                <input type="submit" value="Create Account" class="btn btn-primary" />
+                <input type="submit" value="Next" class="btn btn-primary" />
             </div>
         </div>
     }
