--- a/IClothingApplication/Views/Shared/_Layout.cshtml
+++ b/IClothingApplication/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
         @*<hr />*@
     </div>
 
-    <section class="">
+    <section class="mt-5">
         <!-- Footer -->
         <footer class="footer mt-auto text-center text-white" style="background-color: rgb(33, 37, 41, 0.8);">
             <!-- Grid container -->
