Product Details to Modal

--- a/IClothingApplication/Views/Shared/_Layout.cshtml
+++ b/IClothingApplication/Views/Shared/_Layout.cshtml
@@ -173,7 +173,7 @@
     <script>
         window.onkeydown = function (event) {
             if (event.keyCode === 27 || event.keyCode === 13 || event.keyCode === 32) {
-                $('#staticBackdrop').modal('hide');
+                $('.modal').modal('hide');
             }
         }
     </script>
