--- a/IClothingApplication/Views/Products/Details.cshtml
+++ b/IClothingApplication/Views/Products/Details.cshtml
@@ -6,23 +6,30 @@
 
 <div class="container mt-4">
     @*<h2 class="text-center mb-3">Product Details</h2>*@
-    <div class="card w-50 mx-auto my-auto">
-        <img src="~/Images/@(System.IO.File.Exists(Server.MapPath("~/Images/Products/" + Model.productName + ".jpg")) ? "Products/" + Model.productName + ".jpg" : "placeholder.jpg")" class="card-img-top" alt="Card Image">
-        <div class="card-body">
-            <h4 class="card-title text-center">@Html.DisplayFor(model => model.productName)</h4>
-            <hr />
-            <p class="card-text">
-                <strong>Description:</strong> @Html.DisplayFor(model => model.productDescription)<br>
-                <strong>Price:</strong> $@Html.DisplayFor(model => model.productPrice)<br>
-                <strong>Quantity:</strong> @Html.DisplayFor(model => model.productQty)<br>
-                <strong>Brand:</strong> @Html.DisplayFor(model => model.Brand.brandName)<br>
-                <strong>Category:</strong> @Html.DisplayFor(model => model.Category.categoryName)
-            </p>
-            @if (Session["UserType"] != null && Session["UserType"].ToString() == "admin")
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = Model.productID }, new { @class = "btn btn-primary" })
-            }
-            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary" })
+    <div class="card w-75 mx-auto my-4">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="~/Images/@(System.IO.File.Exists(Server.MapPath("~/Images/Products/" + Model.productName + ".jpg")) ? "Products/" + Model.productName + ".jpg" : "placeholder.jpg")" class="card-img" alt="Card Image">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h4 class="card-title">@Html.DisplayFor(model => model.productName)</h4>
+                    <hr>
+                    <p class="card-text">
+                        <strong>Description:</strong> @Html.DisplayFor(model => model.productDescription)<br>
+                        <strong>Price:</strong> $@Html.DisplayFor(model => model.productPrice)<br>
+                        <strong>Quantity:</strong> @Html.DisplayFor(model => model.productQty)<br>
+                        <strong>Brand:</strong> @Html.DisplayFor(model => model.Brand.brandName)<br>
+                        <strong>Category:</strong> @Html.DisplayFor(model => model.Category.categoryName)
+                    </p>
+                    @if (Session["UserType"] != null && Session["UserType"].ToString() == "admin")
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = Model.productID }, new { @class = "btn btn-primary" })
+                    }
+                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary" })
+                </div>
+            </div>
         </div>
     </div>
+
 </div>
