--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -109,7 +109,8 @@
                 <div class="card" style="height: 700px">
                     <img style="height: 450px; object-fit: cover" src="~/Images/@(System.IO.File.Exists(Server.MapPath("~/Images/Products/" + item.productName + ".jpg")) ? "Products/" + item.productName + ".jpg" : "placeholder.jpg")" class="card-img-top" alt="Card Image">
                     <div class="card-body d-grid">
-                        <h5 class="card-title">@Html.ActionLink(item.productName, "Details", new { id = item.productID }, new { @class = "text-dark" })</h5>
+                        @*<h5 class="card-title">@Html.ActionLink(item.productName, "Details", new { id = item.productID }, new { @class = "text-dark" })</h5>*@
+                        <h5 class="card-title"><a class="detailsButton text-dark" href="#;" data-id=@item.productID>@item.productName</a></h5>
                         <p class="card-text">@(item.productDescription.Length > maxLength ? item.productDescription.Substring(0, maxLength) + "..." : item.productDescription)</p>
 
                         <div class="d-grid" style="height: min-content; align-self: end;">
@@ -147,6 +148,8 @@
     </div>
 </div>
 
+@* Add to cart code *@
+
 <script>
     window.onload = function () {
         $('.addToCartButton').click(function () {
@@ -160,5 +163,65 @@
                 }
             });
         });
+
+        $('.detailsButton').click(function () {
+            $.ajax({
+                url: '@Url.Action("Details", "Products")',
+                type: 'POST',
+                data: { id: $(this).data("id") },
+                success: function (result) {
+                    $('#productModalLabel').html(result.name);
+                    $('#modal-image').attr('src', "../Images/" + result.imageSrc);
+                    $('#product-modal-name').html(result.name);
+                    $('#product-modal-description').html(result.description);
+                    $('#product-modal-price').html("$" + result.price);
+                    $('#product-modal-qty').html(result.qty);
+                    $('#product-modal-brand').html(result.brand);
+                    $('#product-modal-category').html(result.category);
+                    $('#product-modal-category').html(result.category);
+                    $('#productModalButton').data("id", result.id);
+                    $('#productModal').modal('show');
+                }
+            });
+        });
     };
 </script>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#productModal">
+    Launch Product Modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+        <div class="card mx-auto my-4 modal-content">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img id="modal-image" src="" class="card-img" alt="Card Image">
+                </div>
+                <div class="col-md-8 justify-content-center row">
+                    <div class="card-body">
+                        <h4 class="card-title" style="height:min-content"><span id="product-modal-name"></span></h4>
+                        <hr style="height:min-content">
+                        <p class="card-text" style="height:min-content">
+                            <strong>Description:</strong> <span id="product-modal-description"></span><br>
+                            <strong>Price:</strong> <span id="product-modal-price"></span><br>
+                            <strong>Quantity:</strong> <span id="product-modal-qty"></span><br>
+                            <strong>Brand:</strong> <span id="product-modal-brand"></span><br>
+                            <strong>Category:</strong> <span id="product-modal-category"></span>
+                        </p>
+                        <div style="height:max-content"> </div>
+                    </div>
+                    <div class="align-self-end row">
+                        <button id="productModalButton" class="addToCartButton btn btn-primary mb-2" style="height:min-content" data-id=-1>Add To Cart</button>
+                        @if (Session["UserType"] != null && Session["UserType"].ToString() == "admin")
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { id = 1 }, new { @class = "btn btn-secondary mb-2 align-self-end" })
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
