Fixed Validation Error Improveing Product View

--- a/IClothingApplication/Views/Home/RegisterPassword.cshtml
+++ b/IClothingApplication/Views/Home/RegisterPassword.cshtml
@@ -6,7 +6,7 @@
 <main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
 
-    @using (Html.BeginForm("RegisterPassword"))
+    @using (Html.BeginForm("RegisterPassword", "Home", FormMethod.Post, new { role = "form" }))
     {
         @Html.AntiForgeryToken()
         <br />
